# N-Puzzle

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile_handmade  NPuzzleSolver.cpp  NPuzzleSolver.h  README.md  State.cpp  State.hpp  a.out  a_star_n_puzzle.py  gen_makefile.sh  heuristicFunctions.h  main_test.cpp  n-puzzle  package-lock.json  package.json  tell_me_a_joke.py  test_map.txt  test_map.txt.orig  vector.patch
map/solvable/: map_3_1.txt  map_3_2.txt  map_4_1.txt  map_4_2.txt  map_4_3.txt  map_4_4.txt  map_4_5.txt
map/unsolvable/: map_3_1.txt  map_4_1.txt  map_6_1.txt
maps/: map.txt  map_invalid.txt
server/: http_server.cpp
server_test/: my_simple_server.cpp
src/: CLI.cpp  CLI.hpp  CSC.cpp  CSC.hpp  CSCP.cpp  CSCP.hpp  Heuristic.cpp  Heuristic.hpp  NButton.cpp  NButton.h  NPuzzleSolver.cpp  NPuzzleSolver.h  NPuzzleSolver.hpp  State.cpp  State.h  State.hpp  algo.cpp  heuristicFunctions.cpp  heuristicFunctions.hpp  init_window.cpp  jsonExamples.json  main._test.cpp  main.cpp  main.hpp  main_test.cpp  main_thread_test.cpp  messageProtocol.cpp  messageProtocol.hpp  read_from_file.cpp  search_algo.cpp
src/pure_algo/: State.cpp  State.h  algo.cpp
test_maps/: easy_3_3.txt  map_invalid.txt
webPages/: app.js  app2.js  index.html  index2.html  index22.html  style.css
